Commit con correcciones

--- a/licenciatura.html
+++ b/licenciatura.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Licenciatura en Sociologia</title>
 </head>
 
@@ -13,9 +13,9 @@
 
         <div class="imagen">
             <img id="imagen-lateral" src="./img/pexels-nemuel-6424589.jpg" alt="codigo">
-
-
-        </div>
+        # Generar una list view de html
+            
+        </div>   
         <div id="cuerpo">
             <header>
                 <h1>Licenciatura en Sociología</h1>
